--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,428 @@
+/* APP */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(242, 245, 247);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.App {
+  text-align: left;
+  border: 2px solid lightgray;
+  margin: 0 auto;
+}
+
+p {
+  margin: 0;
+}
+
+h1 {
+  color: rgb(251, 173, 18);
+  font-weight: 700;
+  font-size: 30px;
+  margin: 0px;
+}
+
+/* NAV */
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  border-bottom: 2px solid rgb(77, 77, 77);
+}
+.navbar h1 {
+  color: rgb(77, 77, 77);
+}
+.navbar .links {
+  margin-left: auto;
+  color: rgb(77, 77, 77);
+}
+
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: rgb(77, 77, 77);
+}
+
+/* LOADER */
+.loading {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid rgb(90, 89, 89);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 10px auto;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* HOMEPAGE */
+.location-image {
+  border-radius: 16px;
+  width: 100%;
+}
+
+/* pokemon previews / list */
+.pokemon-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.pokemon-preview {
+  padding: 0px;
+  width: 60%;
+  margin: 0 auto;
+  border-radius: 16px;
+  background-color: white;
+  border-bottom: 1px solid #fafafa;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.pokemon-preview:hover {
+  border: 2px solid rgb(77, 77, 77);
+}
+.pokemon-preview h2 {
+  font-size: 20px;
+  color: white;
+  margin: 0px;
+}
+
+.title {
+  text-align: center;
+}
+
+.description {
+  margin: 10px;
+  padding: 15px;
+}
+
+.description-text {
+  margin: 10px 0;
+  color: gray;
+  font-size: 1rem;
+  font-style: italic;
+}
+
+.image-container {
+  position: relative;
+}
+
+.highlights {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 16px;
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+}
+
+.highlights-text {
+  display: flex;
+  gap: 5px;
+  align-items: flex-start;
+  flex-direction: column;
+  flex: 1;
+}
+
+.highlights-price {
+  display: flex;
+  gap: 5px;
+  align-items: flex-start;
+  flex-direction: column;
+  margin-right: 10px;
+}
+
+.per-night {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.moreinfo-btn {
+  background-color: rgb(251, 173, 18);
+  padding: 10px;
+  color: white;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 8px;
+  border-color: transparent;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.reviews {
+  color: rgb(251, 173, 18);
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+
+.review-number {
+  background-color: rgb(77, 77, 77);
+  padding: 8px;
+  color: white;
+  margin-right: 7px;
+  border-radius: 4px;
+}
+
+.feature {
+  color: rgb(77, 77, 77);
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.region {
+  color: #9fa0a0;
+  font-size: 15px;
+}
+
+.no-pokemons {
+  padding: 10px;
+}
+
+.edit {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 10px;
+  color: black;
+  padding: 10px;
+  border: 2px solid rgb(77, 77, 77);
+  border-radius: 8px;
+}
+
+.update-button {
+  width: 130px;
+  margin: 0;
+}
+
+.edit-text {
+  cursor: pointer;
+}
+
+.edit-text:hover {
+  color: rgb(251, 173, 18);
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    padding-left: 10px;
+    font-size: 20px;
+  }
+  .navbar {
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    border-bottom: 2px solid rgb(77, 77, 77);
+  }
+  .navbar h1 {
+    font-size: 20px;
+  }
+  .pokemon-preview {
+    width: 90%;
+    margin: 20px 0;
+    border-bottom: 1px solid #fafafa;
+  }
+  .highlights {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+/* CREATE PAGE */
+/* create new pokemon form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: rgb(77, 77, 77);
+  margin-bottom: 30px;
+}
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button {
+  background: rgb(77, 77, 77);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.pokemon-details {
+  display: grid;
+  place-items: center;
+  margin-top: 20px;
+}
+.pokemon-details button {
+  background: rgb(77, 77, 77);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  margin: 5px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* Game Card */
+.game-card {
+  color: rgb(77, 77, 77);
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 15px;
+  background-color: white;
+}
+
+.destination {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.game-card li {
+  color: black;
+}
+
+.game-card li:hover {
+  color: rgb(251, 173, 18);
+  cursor: pointer;
+}
+
+.game-card button {
+  background: rgb(77, 77, 77);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  width: 35px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.game-card button:hover {
+  background-color: rgb(251, 173, 18);
+  cursor: pointer;
+}
+
+.individual-card {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  outline: none;
+  padding: 10px;
+  border: 1px solid rgb(77, 77, 77);
+  border-radius: 8px;
+  margin: auto;
+}
+
+.sort-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+/* Search Page */
+.search__page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+.search__page h1 {
+  color: rgb(77, 77, 77);
+}
+
+.search__page h1:hover {
+  color: rgb(251, 173, 18);
+}
+
+.search__page input {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+
+.search__page button {
+  background: rgb(77, 77, 77);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 100%;
+}
+
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 80vw;
+}
+
+.search__title > a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.search__title > a {
+  cursor: pointer;
+  text-decoration: none;
 }
